--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2561,16 +2561,22 @@ input, select, textarea {
 				}
 
 /* Image */
+	
+    .imagetesting {
+		border-radius: 50%;
+
+	}
 
 	.image {
 		border-radius: 0.25em;
 		border: 0;
 		display: inline-block;
 		position: relative;
+		border-radius: 50%
 	}
 
 		.image img {
-			border-radius: 0.25em;
+			border-radius: 50%;
 			display: block;
 		}
 
@@ -2580,18 +2586,21 @@ input, select, textarea {
 
 			.image.left img, .image.right img {
 				width: 100%;
+				border-radius: 50%;
 			}
 
 		.image.left {
 			float: left;
 			margin: 0 1.5em 1em 0;
 			top: 0.25em;
+			border-radius: 50%
 		}
 
 		.image.right {
 			float: right;
 			margin: 0 0 1em 1.5em;
 			top: 0.25em;
+			border-radius: 50%
 		}
 
 		.image.fit {
